[package]
name = "dbench"
version = "0.1.0"
authors = ["Francesco Gadaleta <francesco.gadaleta@trurisk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
memmap = "0.7.0"
criterion = "0.3"
rocksdb = "0.16"
sled = "0.34.6"
redis = "0.20.0"
zerocopy = "0.5.0"

rand_isaac = "0.3"
random-string = "0.2.0"

[[bench]]
name = "btree_vs_rocksdb"
harness = false