[package]
name = "dbench"
version = "0.1.0"
authors = ["Francesco Gadaleta <francesco@amethix.com>"]
edition = "2021"


[dependencies]
byteorder = "1.3.4"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
memmap = "0.7.0"
criterion = "0.3"
rocksdb = "0.18.0"
sled = "0.34.7"
# redis = "0.20.0"
redis = { version = "0.21.5", features = ["tokio-comp"] }
zerocopy = "0.6.1"
quickcheck = "1.0.3"
rand = "0.8.5"
rand_isaac = "0.3"


[[bench]]
name = "btree_vs_rocksdb"
harness = false